# llm-venice

./: .gitignore  README.md  llm_venice.py  pyproject.toml
.github/workflows/: release.yml  test.yml
llm_venice/: __init__.py  constants.py  utils.py
llm_venice/api/: characters.py  client.py  errors.py  keys.py  refresh.py  upscale.py
llm_venice/cli/: __init__.py  api_keys.py  characters.py  command_hooks.py  errors.py  options.py  upscale.py  venice_group.py
llm_venice/models/: __init__.py  audio.py  chat.py  image.py
tests/: conftest.py  test_api_keys.py  test_audio.py  test_characters.py  test_chat.py  test_image.py  test_image_upscale.py  test_integration.py  test_integration_comprehensive.py  test_model_registration.py  test_prompt.py  test_refresh.py  test_utils.py
tests/schemas/: api_keys_rate_limits.json
