[project]
name = "llm-venice"
version = "0.8.2"
description = "LLM plugin to access models available via the Venice API"
readme = "README.md"
authors = [{name = "Arjan Mossel"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm>=0.28",
]

[project.urls]
Homepage = "https://github.com/ar-jan/llm-venice"
Changelog = "https://github.com/ar-jan/llm-venice/releases"
Issues = "https://github.com/ar-jan/llm-venice/issues"
CI = "https://github.com/ar-jan/llm-venice/actions"

[project.entry-points.llm]
venice = "llm_venice"

[project.optional-dependencies]
test = [
    "jsonschema",
    "pytest",
    "pytest-httpx",
    "sqlite_utils",
]
dev = [
    "ruff>=0.14.8",
    "pyright",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests that call external APIs"
]
addopts = "-m 'not integration'"

[tool.uv]
managed = false

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
line-ending = "lf"

[tool.pyright]
include = [
    "llm_venice",
    "tests",
]
exclude = [
    "**/__pycache__",
]
defineConstant = { DEBUG = true }

reportMissingImports = "error"

pythonVersion = "3.12"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
